# GNUDash

./: .default_config.toml  .gitignore  README.md  pyproject.toml
docs/: PLAN.md
src/: config.py  game.py  logging.py  main.py  main_menu.py
src/components/: player.py
src/core/: blocks.py  level_generator.py  player.py  source_code.py
src/core/level_generator/: __init__.py  generator.py  platform_generator.py
